--- a/src/app/components/main-webpage/coworking-item/coworking-item.component.html
+++ b/src/app/components/main-webpage/coworking-item/coworking-item.component.html
@@ -117,7 +117,7 @@
     <div class="reviews">
       <div class="review" *ngFor="let review of allReviews">
         <div class="review-title-container">
-          <img src="assets/img/star.svg" alt="avatar" class="avatar">
+          <img src="{{review.user_photo}}" alt="avatar" class="avatar">
           <div class="review-title">
 
             <div class="review-name-date">
