--- a/src/app/components/main-webpage/filter/filter.component.html
+++ b/src/app/components/main-webpage/filter/filter.component.html
@@ -86,6 +86,11 @@
         <label for="weekdays">По будням</label>
       </div>
 
+      <div class="radio">
+        <input type="radio" class="custom-radio custom-radio_single" id="everyday" name="time" value="everyday">
+        <label for="everyday">Каждый день</label>
+      </div>
+
     </div>
 
     <div class="filter-labels filter-parking">
