--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.css
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.css
@@ -1,3 +1,7 @@
+.dn {
+  display: none;
+}
+
 @media screen and (max-width: 5000px) {
   .return-to-main {
     display: flex;
@@ -78,42 +82,50 @@
   }
 
   .progress-information {
+    display: flex;
+    gap: 75px;
     margin-left: 520px;
     margin-bottom: 40px;
-    padding: 50px 85px 80px 102px;
     width: 1075.53px;
-    left: 568.47px;
-    top: 824px;
     background: rgba(190, 218, 195, 0.7);
     border-radius: 20px;
   }
 
+  .progress-donuts {
+    padding: 50px 0px 80px 102px;
+  }
+
   .progress-information__span {
-    display: flex;
+    width: 560px;
+    text-align: center;
+  }
+
+  .progress-information__span p {
     font-size: 40px;
     font-weight: 700;
     line-height: 54px;
     letter-spacing: 0em;
     text-align: center;
-    margin-left: 230px;
-    /* Поменял с 75 на 230 */
+    margin-top: 50px;
     color: rgba(27, 31, 59, 0.8);
     width: 560px;
     margin-bottom: 90px;
   }
 
   .progress-information__btn {
-    cursor: pointer;
-    display: flex;
     font-size: 15px;
     width: 188.49px;
-    padding: 13px 28px;
+    height: 54px;
     background: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
     font-weight: 600;
     color: rgba(27, 31, 59, 0.6);
-    margin-left: 420px;
+  }
+
+  .donut {
+    width: 251px;
+    height: 251px;
   }
 
   .about-information {
@@ -409,41 +421,38 @@
   }
 
   .progress-information {
+    gap: calc(0.75*75px);
     margin-left: calc(0.75*520px);
     margin-bottom: calc(0.83*40px);
-    padding: calc(0.83*50px) calc(0.75*85px) calc(0.83*80px) calc(0.75*102px);
     width: calc(0.75*1075.53px);
-    left: calc(0.75*568.47px);
-    top: calc(0.83*824px);
-    background: rgba(190, 218, 195, 0.7);
-    border-radius: 20px;
+  }
+
+  .progress-donuts {
+    padding: calc(0.83*50px) 0px calc(0.83*80px) calc(0.75*102px);
   }
 
   .progress-information__span {
-    display: flex;
+    width: calc(0.75*560px);
+  }
+
+  .progress-information__span p {
     font-size: calc(0.75*40px);
-    font-weight: 700;
     line-height: calc(0.83*54px);
     letter-spacing: 0em;
-    text-align: center;
-    margin-left: calc(0.75*230px);
-    color: rgba(27, 31, 59, 0.8);
+    margin-top: calc(0.83*50px);
     width: calc(0.75*560px);
-    margin-bottom: calc(0.83*90px);
+    margin-bottom: calc(0.75*90px);
   }
 
   .progress-information__btn {
-    cursor: pointer;
-    display: flex;
     font-size: calc(0.75*15px);
     width: calc(0.75*188.49px);
-    padding: calc(0.83*13px) calc(0.75*28px);
-    background: #E0E0D6;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
-    border-radius: 10px;
-    font-weight: 600;
-    color: rgba(27, 31, 59, 0.6);
-    margin-left: calc(0.75*420px);
+    height: calc(0.83*54px);
+  }
+
+  .donut {
+    width: calc(0.75*251px);
+    height: calc(0.75*251px);
   }
 
   .about-information {
@@ -735,41 +744,38 @@
   }
 
   .progress-information {
+    gap: calc(0.71*75px);
     margin-left: calc(0.71*520px);
     margin-bottom: calc(0.71*40px);
-    padding: calc(0.71*50px) calc(0.71*85px) calc(0.71*80px) calc(0.71*102px);
     width: calc(0.71*1075.53px);
-    left: calc(0.71*568.47px);
-    top: calc(0.71*824px);
-    background: rgba(190, 218, 195, 0.7);
-    border-radius: 20px;
+  }
+
+  .progress-donuts {
+    padding: calc(0.71*50px) 0px calc(0.71*80px) calc(0.71*102px);
   }
 
   .progress-information__span {
-    display: flex;
+    width: calc(0.71*560px);
+  }
+
+  .progress-information__span p {
     font-size: calc(0.71*40px);
-    font-weight: 700;
     line-height: calc(0.71*54px);
     letter-spacing: 0em;
-    text-align: center;
-    margin-left: calc(0.71*230px);
-    color: rgba(27, 31, 59, 0.8);
+    margin-top: calc(0.71*50px);
     width: calc(0.71*560px);
     margin-bottom: calc(0.71*90px);
   }
 
   .progress-information__btn {
-    cursor: pointer;
-    display: flex;
     font-size: calc(0.71*15px);
     width: calc(0.71*188.49px);
-    padding: calc(0.71*13px) calc(0.71*28px);
-    background: #E0E0D6;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
-    border-radius: 10px;
-    font-weight: 600;
-    color: rgba(27, 31, 59, 0.6);
-    margin-left: calc(0.71*420px);
+    height: calc(0.71*54px);
+  }
+
+  .donut {
+    width: calc(0.71*251px);
+    height: calc(0.71*251px);
   }
 
   .about-information {
