--- a/src/app/components/main-webpage/main-page/main-page.component.css
+++ b/src/app/components/main-webpage/main-page/main-page.component.css
@@ -29,6 +29,16 @@
 
 
 @media screen and (max-width: 5000px) {
+  .pagination /deep/ .ngx-pagination .current {
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 10px;
+  }
+
+  .pagination /deep/ .ngx-pagination a:hover, .ngx-pagination button:hover {
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 10px;
+  }
+
   .count-coworkings {
     color: rgba(27, 31, 59, 0.8);
     font-weight: 700;
@@ -210,6 +220,16 @@
 }
 
 @media screen and (max-width: 1450px) {
+  .pagination /deep/ .ngx-pagination .current {
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 10px;
+  }
+
+  .pagination /deep/ .ngx-pagination a:hover, .ngx-pagination button:hover {
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 10px;
+  }
+
   .count-coworkings {
     color: rgba(27, 31, 59, 0.8);
     font-weight: 700;
@@ -371,6 +391,16 @@
 }
 
 @media screen and (max-width: 1370px) {
+  .pagination /deep/ .ngx-pagination .current {
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 10px;
+  }
+
+  .pagination /deep/ .ngx-pagination a:hover, .ngx-pagination button:hover {
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 10px;
+  }
+
   .count-coworkings {
     color: rgba(27, 31, 59, 0.8);
     font-weight: 700;
