--- a/src/app/components/ad-business/ad-business.component.css
+++ b/src/app/components/ad-business/ad-business.component.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 5000px){
 .return-to-main {
   display: flex;
-  width: 180px;
+  width: 300px;
   margin-left: 168px;
   margin-bottom: 65px;
   margin-top: 18px;
@@ -203,6 +203,7 @@ label {
 .button-send {
   width: 220px;
   height: 54px;
+  font-size: 15px;
   margin-top: 48px;
   background-color: #E0E0D6;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
@@ -220,7 +221,7 @@ label {
 
   .return-to-main {
     display: flex;
-    width: calc(0.75*180px);
+    width: calc(0.75*300px);
     margin-left: calc(0.75*168px);
     margin-bottom: calc(0.83*65px);
     align-items: center;
@@ -419,6 +420,7 @@ label {
   .button-send {
     width: calc(0.75*220px);
     height: calc(0.83*54px);
+    font-size: calc(0.75*15px);
     margin-top: calc(0.83*48px);
     background-color: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
@@ -437,7 +439,7 @@ label {
 
   .return-to-main {
     display: flex;
-    width: calc(0.71*180px);
+    width: calc(0.71*300px);
     margin-left: calc(0.71*168px);
     margin-bottom: calc(0.71*65px);
     align-items: center;
@@ -636,6 +638,7 @@ label {
   .button-send {
     width: calc(0.71*220px);
     height: calc(0.71*54px);
+    font-size: calc(0.71*15px);
     margin-top: calc(0.71*48px);
     background-color: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
