--- a/src/app/components/place-settings/place-settings.component.css
+++ b/src/app/components/place-settings/place-settings.component.css
@@ -1,179 +1,177 @@
-@media screen and (max-width: 5000px){
-.return-to-main {
-  display: flex;
-  width: 180px;
-  margin-left: 168px;
-  margin-bottom: 65px;
-  margin-top: 18px;
-  align-items: center;
-}
-
-.return-button {
-  margin-right: 18px;
-  margin-top: auto;
-  margin-bottom: auto;
-  width: 16px;
-  height: 16px;
-}
-
-.return-to-main span {
-  font-size: 15px;
-  line-height: 20px;
-  color: rgba(27, 31, 59, 0.65);
-}
-
-.wrapper {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.content {
-  flex: 1;
-}
-
-.main-top-content {
-  display: flex;
-  margin-left: 202px;
-  margin-top: 65px;
-}
-
-.profile-navigation {
-  width: 238px;
-  margin-right: 60px;
-  margin-top: 31px;
-}
-
-.profile-navigation li {
-  font-size: 20px;
-  line-height: 177.69%;
-  margin-bottom: 16px;
-}
-
-.profile-navigation li:last-child {
-  margin-bottom: 0;
-}
-
-.title {
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 38px;
-  margin-bottom: 11px;
-}
-
-.description {
-  display: inline-block;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 43px;
-}
-
-.explanations {
-  display: flex;
-  list-style: none;
-  margin-top: 45px;
-  padding-left: 27px;
-}
-
-.explanations-li {
-  max-width: 158px;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 27px;
-  color: #535353;
-}
-
-.explanations-li {
-  margin-right: 118px;
-}
-
-.card {
-  position: relative;
-  display: flex;
-  max-width: 1070px;
-  min-height: 99px;
-  background: rgba(190, 218, 195, 0.7);
-  border-radius: 20px;
-}
-
-.card-li {
-  margin-bottom: 30px;
-}
-
-.card-title {
-  width: 165px;
-  padding-top: 16px;
-  padding-left: 27px;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 33px;
-  word-wrap: break-word;
-}
-
-.adress {
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 27px;
-  padding-left: 27px;
-}
-
-.second-block__card {
-  position: absolute;
-  margin-top: -1.9em;
-  top: 50%;
-  right: 25px;
-}
-
-.number {
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 43px;
-  padding-top: 28px;
-}
-
-.third-block__card {
-  margin-left: 235px;
-}
-
-.card-li:last-child {
-  margin-bottom: 100px;
-}
-
-.progress-information__btn {
-  cursor: pointer;
-  display: flex;
-  width: 239.62px;
-  height: 54px;
-  background: #E0E0D6;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
-  padding: 13px 63px;
-  border-radius: 10px;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 28px;
-  color: rgba(27, 31, 59, 0.4);
-}
-}
-
-@media screen and (max-width: 1450px){
+@media screen and (max-width: 5000px) {
   .return-to-main {
     display: flex;
-    width: calc(0.75*180px);
-    margin-left: calc(0.75*168px);
-    margin-bottom: calc(0.83*65px);
+    width: 180px;
+    margin-left: 168px;
+    margin-bottom: 65px;
+    margin-top: 18px;
     align-items: center;
   }
 
   .return-button {
-    margin-right: calc(0.75*18px);
+    margin-right: 18px;
     margin-top: auto;
     margin-bottom: auto;
+    width: 16px;
+    height: 16px;
+  }
+
+  .return-to-main span {
+    font-size: 15px;
+    line-height: 20px;
+    color: rgba(27, 31, 59, 0.65);
+  }
+
+  .wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content {
+    flex: 1;
+  }
+
+  .main-top-content {
+    display: flex;
+    margin-left: 202px;
+    margin-top: 65px;
+  }
+
+  .profile-navigation {
+    width: 238px;
+    margin-right: 60px;
+    margin-top: 31px;
+  }
+
+  .profile-navigation li {
+    font-size: 20px;
+    line-height: 177.69%;
+    margin-bottom: 16px;
+  }
+
+  .profile-navigation li:last-child {
+    margin-bottom: 0;
+  }
+
+  .title {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 38px;
+    margin-bottom: 11px;
+  }
+
+  .description {
+    display: inline-block;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 43px;
+  }
+
+  .explanations {
+    display: flex;
+    list-style: none;
+    margin-top: 45px;
+    padding-left: 27px;
+  }
+
+  .explanations-li {
+    max-width: 158px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 27px;
+    color: #535353;
+  }
+
+  .explanations-li {
+    margin-right: 118px;
+  }
+
+  .card {
+    position: relative;
+    display: flex;
+    max-width: 1070px;
+    min-height: 99px;
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 20px;
+  }
+
+  .card-li {
+    margin-bottom: 30px;
+  }
+
+  .card-title {
+    width: 165px;
+    padding-top: 16px;
+    padding-left: 27px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    word-wrap: break-word;
+  }
+
+  .adress {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 27px;
+    padding-left: 27px;
+  }
+
+  .second-block__card {
+    position: absolute;
+    margin-top: -1.9em;
+    top: 50%;
+    right: 25px;
+  }
+
+  .number {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 43px;
+    padding-top: 28px;
+  }
+
+  .third-block__card {
+    margin-left: 235px;
+  }
+
+  .card-li:last-child {
+    margin-bottom: 100px;
+  }
+
+  .progress-information__btn {
+    cursor: pointer;
+    display: flex;
+    width: 239.62px;
+    height: 54px;
+    background: #E0E0D6;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+    padding: 13px 63px;
+    border-radius: 10px;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 28px;
+    color: rgba(27, 31, 59, 0.4);
+  }
+}
+
+@media screen and (max-width: 1450px) {
+  .return-to-main {
+    width: calc(0.75*180px);
+    margin-left: calc(0.75*168px);
+    margin-bottom: calc(0.83*65px);
+    margin-top: calc(0.83*18px);
+  }
+
+  .return-button {
+    margin-right: calc(0.75*18px);
+    width: calc(0.75*16px);
+    height: calc(0.83*16px);
   }
 
   .return-to-main span {
     font-size: calc(0.75*15px);
     line-height: calc(0.83*20px);
-    color: rgba(27, 31, 59, 0.65);
   }
 
   .wrapper {
@@ -308,25 +306,23 @@
   }
 }
 
-@media screen and (max-width: 1370px){
+@media screen and (max-width: 1370px) {
   .return-to-main {
-    display: flex;
-    width: calc(0.71*300px);
+    width: calc(0.71*180px);
     margin-left: calc(0.71*168px);
     margin-bottom: calc(0.71*65px);
-    align-items: center;
+    margin-top: calc(0.71*18px);
   }
 
   .return-button {
     margin-right: calc(0.71*18px);
-    margin-top: auto;
-    margin-bottom: auto;
+    width: calc(0.71*16px);
+    height: calc(0.71*16px);
   }
 
   .return-to-main span {
     font-size: calc(0.71*15px);
     line-height: calc(0.71*20px);
-    color: rgba(27, 31, 59, 0.65);
   }
 
   .wrapper {
