--- a/src/app/components/place-settings/place-settings.component.html
+++ b/src/app/components/place-settings/place-settings.component.html
@@ -2,7 +2,7 @@
 
 <div class="return-to-main">
   <a routerLink="/">
-    <img src="assets/img/return-button.svg" alt="return-button" class="return-button" width="16" height="16">
+    <img src="assets/img/return-button.svg" alt="return-button" class="return-button">
   </a>
   <span>Вернуться к поиску</span>
 </div>
